syntax = "proto3";

package raft;
option go_package = ".";

message AppendEntriesRequest {
  int32 term = 1;
  int32 leaderID = 2;
  int32 prevLogIndex = 3;
  int32 prevLogTerm = 4;
  repeated LogEntry entries = 5;
  int32 leaderCommit = 6;
}

message AppendEntriesResponse {
  int32 term = 1;
  bool success = 2;
}

message RequestVoteRequest {
  int32 term = 1;
  int32 candidateID = 2;
  int32 lastLogIndex = 3;
  int32 lastLogTerm = 4;
}

message RequestVoteResponse {
  int32 term = 1;
  bool voteGranted = 2;
}

message LogEntry {
  int32 term = 1;
  string command = 2;
  string uuid = 3;
}

message RequestPleaseRequest {
  string command = 1;
  string uuid = 2;
}

message RequestPleaseResponse {
  bool success = 1;
}

service Raft {
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse);
  rpc PleaseDoThis (RequestPleaseRequest) returns (RequestPleaseResponse);
}
